@@ -1,5 +1,5 @@
 /*
- * Copyright 2015 - 2021 Anton Tananaev (anton@traccar.org)
+ * Copyright 2015 - 2025 Anton Tananaev (anton@traccar.org)
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,51 +16,87 @@
 package org.traccar.api;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import org.eclipse.jetty.websocket.api.Callback;
 import org.eclipse.jetty.websocket.api.Session;
-import org.eclipse.jetty.websocket.api.WebSocketAdapter;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.traccar.Context;
-import org.traccar.database.ConnectionManager;
+import org.traccar.helper.model.PositionUtil;
 import org.traccar.model.Device;
 import org.traccar.model.Event;
+import org.traccar.model.LogRecord;
 import org.traccar.model.Position;
+import org.traccar.session.ConnectionManager;
+import org.traccar.storage.Storage;
+import org.traccar.storage.StorageException;
 
+import java.nio.channels.ClosedChannelException;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
-public class AsyncSocket extends WebSocketAdapter implements ConnectionManager.UpdateListener {
+public class AsyncSocket implements Session.Listener.AutoDemanding, ConnectionManager.UpdateListener {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(AsyncSocket.class);
 
     private static final String KEY_DEVICES = "devices";
     private static final String KEY_POSITIONS = "positions";
     private static final String KEY_EVENTS = "events";
+    private static final String KEY_LOGS = "logs";
 
+    private final ObjectMapper objectMapper;
+    private final ConnectionManager connectionManager;
+    private final Storage storage;
     private final long userId;
 
-    public AsyncSocket(long userId) {
+    private boolean includeLogs;
+    private Session session;
+
+    public AsyncSocket(ObjectMapper objectMapper, ConnectionManager connectionManager, Storage storage, long userId) {
+        this.objectMapper = objectMapper;
+        this.connectionManager = connectionManager;
+        this.storage = storage;
         this.userId = userId;
     }
 
     @Override
-    public void onWebSocketConnect(Session session) {
-        super.onWebSocketConnect(session);
-
-        Map<String, Collection<?>> data = new HashMap<>();
-        data.put(KEY_POSITIONS, Context.getDeviceManager().getInitialState(userId));
-        sendData(data);
-
-        Context.getConnectionManager().addListener(userId, this);
+    public void onWebSocketOpen(Session session) {
+        this.session = session;
+        try {
+            Map<String, Collection<?>> data = new HashMap<>();
+            data.put(KEY_POSITIONS, PositionUtil.getLatestPositions(storage, userId));
+            sendData(data);
+            connectionManager.addListener(userId, this);
+        } catch (StorageException e) {
+            throw new RuntimeException(e);
+        }
     }
 
     @Override
     public void onWebSocketClose(int statusCode, String reason) {
-        super.onWebSocketClose(statusCode, reason);
+        connectionManager.removeListener(userId, this);
+        session = null;
+    }
 
-        Context.getConnectionManager().removeListener(userId, this);
+    @Override
+    public void onWebSocketText(String message) {
+        try {
+            JsonNode json = objectMapper.readTree(message);
+            if (json.hasNonNull("logs")) {
+                includeLogs = json.get("logs").asBoolean();
+            }
+        } catch (JsonProcessingException e) {
+            LOGGER.warn("Socket JSON parsing error", e);
+        }
+    }
+
+    @Override
+    public void onWebSocketError(Throwable cause) {
+        if (!(cause instanceof ClosedChannelException)) {
+            LOGGER.warn("WebSocket error", cause);
+        }
     }
 
     @Override
@@ -70,29 +106,30 @@ public class AsyncSocket extends WebSocketAdapter implements ConnectionManager.U
 
     @Override
     public void onUpdateDevice(Device device) {
-        Map<String, Collection<?>> data = new HashMap<>();
-        data.put(KEY_DEVICES, Collections.singletonList(device));
-        sendData(data);
+        sendData(Map.of(KEY_DEVICES, List.of(device)));
     }
 
     @Override
     public void onUpdatePosition(Position position) {
-        Map<String, Collection<?>> data = new HashMap<>();
-        data.put(KEY_POSITIONS, Collections.singletonList(position));
-        sendData(data);
+        sendData(Map.of(KEY_POSITIONS, List.of(position)));
     }
 
     @Override
     public void onUpdateEvent(Event event) {
-        Map<String, Collection<?>> data = new HashMap<>();
-        data.put(KEY_EVENTS, Collections.singletonList(event));
-        sendData(data);
+        sendData(Map.of(KEY_EVENTS, List.of(event)));
+    }
+
+    @Override
+    public void onUpdateLog(LogRecord record) {
+        if (includeLogs) {
+            sendData(Map.of(KEY_LOGS, List.of(record)));
+        }
     }
 
     private void sendData(Map<String, Collection<?>> data) {
-        if (isConnected()) {
+        if (session != null && session.isOpen()) {
             try {
-                getRemote().sendString(Context.getObjectMapper().writeValueAsString(data), null);
+                session.sendText(objectMapper.writeValueAsString(data), Callback.NOOP);
             } catch (JsonProcessingException e) {
                 LOGGER.warn("Socket JSON formatting error", e);
             }
